# training-tracker

./: .gitignore  main.py  pyproject.toml
.github/workflows/: build-ios.yml
app/db/: database.py  models.py
app/services/: exercise_service.py  plan_service.py  session_service.py
app/views/: exercises_view.py  history_view.py  plans_view.py  utils.py  workout_view.py
