[project]
name = "training-tracker"
version = "0.1.0"
description = "Mobile Training Tracker App"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.24.0",
    "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
